barra lateral, deportes, editorial, ed impresa

--- a/index.html
+++ b/index.html
@@ -367,10 +367,6 @@
               </div>
             <!--Fin de Noticias secundarias-->
 
-
-
-
-
              
              <!--La barra siguiente-->
              <div class="row">
@@ -379,6 +375,7 @@
                 </div>
              </div>
              <!--Fin de barra siguiente-->
+
 
              <!--Barrita como pestaña>-->
              <div class="row">
@@ -396,6 +393,9 @@
                 </div>
              </div>
              <!--Fin de barrita como pestaña-->
+
+
+
              <!--Noticias de cuatro columnas-->
                <div class="row">
                   <div class="col-md-3">
@@ -453,6 +453,8 @@
           </div>
           <!--VIDEO-->
 
+
+
         <!-- DEPORTES -->
         <div class="row">
 
@@ -460,7 +462,7 @@
             <div class="col-md-4">
               <div class="row">
                   <div class="col-md-12">
-                    <img src="images/deportes1.jpg" alt="noticia pequeñas 4" >
+                    <img src="images/tennis.jpg" alt="noticia pequeñas 4" >
                   </div>
               </div>
            </div>
@@ -503,6 +505,7 @@
         <!--FIN BLOQUE QUE CONTIENE LA NOTICIA PRINCIPAL CON LAS CUATRO COLUMNAS Y EL VIDEO Y TODO LO SEÑALADO-->
 
 
+
          <!--La barra siguiente-->
              <div class="row">
                 <div class="col-md-12">
@@ -510,6 +513,8 @@
                 </div>
              </div>
          <!--Fin de barra siguiente-->
+
+
 
 
        <!--BLOQUE DE NOTICIAS CUADRADAS-->
@@ -643,26 +648,57 @@
                 </div>
 
 
-
+                <!-- EDITORIAL -->
                 <div class="col-md-4">
-                  <img src="images/editorial.jpg" alt="noticia pequeñas 4" >
+                  
+                  <span class="label label-danger">Editorial</span>
+                  <div class="row">
+                     <div class="col-md-12 col-md-12">
+                        <div class="thumbnail">
+                          <img src="images/editorial.jpg" alt="noticia pequeñas 4" >
+                             <div class="caption">
+                                <h3>Factores externos en desaceleración de la economía</h3>
+                                <p>El senador DC, Andrés Zaldívar, afirmó hoy que la DC no avaló que se llevara a cabo el golpe militar el 11 de septiembre de 1973, y que el ex Presidente Salvador Allende se vio sobrepasado por las motivaciones y aspiraciones de sus colaboradores.
+
+El parlamentario dijo en TVN que, "personalmente, lo que creo es que el Presidente Allende fue sobrepasado por su propia gente".</p>
+                                <p><a href="#" class="btn btn-primary">Opina</a> </p>
+                             </div>
+                        </div>
+                     </div>
+                  </div>
+
+
+                </div>
+                <!-- EDITORIAL -->
+
+
+
+
+
+                <!-- MAS COMENTADOS -->
+                <div class="col-md-4">
+                  <span class="label label-danger">Los más vistos</span>
+                  <img src="images/iconfoto.jpg" alt="Los más vistos" >
                 </div>
 
                 <div class="col-md-4">
-                  <img src="images/editorial.jpg" alt="noticia pequeñas 4" >
+                  <span class="label label-danger">Los más comentados</span>
+                  <img src="images/iconfoto.jpg" alt="Los más comentados" >
                 </div>
 
                 <div class="col-md-4">
-                  <img src="images/editorial.jpg" alt="noticia pequeñas 4" >
+                  <span class="label label-danger">Blogs</span>
+                  <img src="images/iconfoto.jpg" alt="Blogs" >
                 </div>
 
                 <div class="col-md-4">
-                  <img src="images/editorial.jpg" alt="noticia pequeñas 4" >
+                  <span class="label label-danger">Edición Impresa</span>
+                  <img src="images/edimpresa.jpg" alt="Edición Impresa" >
                 </div>
+                <!-- MAS COMENTADOS -->
 
-                <div class="col-md-4">
-                  <img src="images/editorial.jpg" alt="noticia pequeñas 4" >
-                </div>
+
+
 
 
              <!-- BARRA SEPARADORA -->
