--- a/index.html
+++ b/index.html
@@ -525,68 +525,172 @@
                 <div class="col-md-3">
                   <div class="masnoticiasvermas">
                           <div class="lafotazo">
-                             <!--<img src="images/relacionoticia2.jpg" alt="1 noticias">-->
+                             <img src="images/vhfotonoti1.jpg" alt="1 noticias">
                           </div>
                           <div class="pocofloro">
                             <a href="#"><p>Otro asalto a cambistas</p></a>
                           </div>
-                      </div>
+                  </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="images/noticuadrados.jpg" alt="noticia pequeñas 2" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti2.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="images/noticuadrados.jpg" alt="noticia pequeñas 3" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti3.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="images/noticuadrados.jpg" alt="noticia pequeñas 4" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti4.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
               </div>
 
-              <div class="row">
+              <div class="row toditomas">
                 <div class="col-md-3">
-                  <img src="images/noticuadrados.jpg" alt="noticia pequeñas 1" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti5.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="images/noticuadrados.jpg" alt="noticia pequeñas 2" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti6.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="images/noticuadrados.jpg" alt="noticia pequeñas 3" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti7.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="images/noticuadrados.jpg" alt="noticia pequeñas 4" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti8.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
               </div>
 
-              <div class="row">
+              <div class="row toditomas">
                 <div class="col-md-3">
-                  <img src="images/noticuadrados.jpg" alt="noticia pequeñas 1" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti9.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="images/noticuadrados.jpg" alt="noticia pequeñas 2" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti10.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="images/noticuadrados.jpg" alt="noticia pequeñas 3" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti11.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="images/noticuadrados.jpg" alt="noticia pequeñas 4" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti12.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
               </div>
 
-              <div class="row">
+              <div class="row toditomas">
                 <div class="col-md-3">
-                  <img src="images/noticuadradosgris.jpg" alt="noticia pequeñas 1" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti12.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="images/noticuadradosgris.jpg" alt="noticia pequeñas 2" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti13.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="images/noticuadradosgris.jpg" alt="noticia pequeñas 3" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti14.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="images/noticuadradosgris.jpg" alt="noticia pequeñas 4" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <img src="images/vhfotonoti15.jpg" alt="1 noticias">
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                  </div>
                 </div>
-              </div>
 
           </div>
        </div>
